--- a/index.css
+++ b/index.css
@@ -23,12 +23,17 @@ div.descriptionText {
 
 div.noteText {
     margin-top: 3px;
+    margin-left: 30px;
     font-weight: 500;
     font-size: 16px;
 }
 
+#noteSlider{
+  margin-right: 10px;
+}
+
 table {
-    width: 700px;
+    width: 1000px;
 }
 
 td {
@@ -93,7 +98,7 @@ pre.prettyprint {
     font-family: Menlo, 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', Monaco, Consolas, monospace;
     overflow: auto;
     tab-size: 4;
-    height:16em;
+    height:8em;
     background-color:#eee;
     margin-bottom: 0em;
 }
